bpo-32023: Disallow genexprs without parenthesis in class definitions. (#4400)